# financio

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  example_usage.cpp  imgui.ini  measure.py
app/: CMakeLists.txt  main.cpp
app/engine/include/eng/core/: assert.h  base.h  layer.h  layer_stack.h  logger.h  timer.h
app/engine/include/eng/core/debug/: profiler.h
app/engine/include/eng/events/: event.h
app/engine/include/eng/platform/: mouse_codes.h
app/engine/include/eng/renderer/: renderer_api.h
app/engine/include/eng/runtime/: application.h  entry_windowed.cpp
app/engine/src/: main_headless.cpp
app/engine/src/renderer/: pipeline.cpp
app/engine/src/runtime/: application_base.cpp
app/engine/src/ui/: implot.cpp
app/include/financio/: root_layer.h
app/include/financio/client/: states.h  trading_worker.h  trading_wrapper.h  worker.h  wrapper.h
app/include/financio/rpc/: trader_client.h
app/include/financio/trading/: CMakeLists.txt  available_algo_params.cpp  client.cpp  client.h  main.cpp  order_samples.cpp  stdafx.h  utils.cpp
app/include/financio/types/: base.h  event_types.h  request_types.h
app/include/financio/ui/panels/: account_panel.h  chart_panel.h  trading_panel.h
app/include/financio/viewmodels/: marketdata_vm.h
app/src/: layer.cpp  layer.h  main.cpp  root_layer.cpp
app/src/client/: trading_worker.cpp  trading_wrapper.cpp  worker.cpp  wrapper.cpp
app/src/implot/: implot.cpp  implot_items.cpp
app/src/rpc/: trader_client.cpp
app/src/ui/: ui_manager.cpp
app/src/ui/panels/: chart_panel.cpp  trading_panel.cpp
dev/: PHASES.md
engine/: CMakeLists.txt  engpch.h
engine/examples/: material_usage_example.cpp
engine/include/: engpch.h
engine/include/eng/: enginio.h
engine/include/eng/core/: application.h  application.tpp  assert.h  base.h  caps.h  context.tpp  entry_point.cpp  entry_point.h  layer.h  logger.h  macros.h  platform_detection.h  timestep.h  window.h
engine/include/eng/core/_old/: caps.h
engine/include/eng/core/_old/layer/: layer.tpp
engine/include/eng/core/context/: command_queue.h  context.h  context_utils.h  macros.h
engine/include/eng/core/debug/: context.h
engine/include/eng/core/events/: application_event.h
engine/include/eng/core/layer/: layer.h  layer.tpp  layer_stack.h  layer_stack.tpp
engine/include/eng/events/: event.h  key_event.h  mouse_event.h
engine/include/eng/helpers/: error.h  string.h  user_data.h
engine/include/eng/hooks/: hooks.h
engine/include/eng/hooks/frontend/: gui_ctx.h  gui_hooks.h  ui_overlay.h
engine/include/eng/input/: input.h  key_codes.h
engine/include/eng/platform/: window.h
engine/include/eng/platform/macos/: window.h
engine/include/eng/renderer/: buffer.h  format.h  pipeline.h  pipeline_specification.h  render_pass.h  renderer.h  renderer_api.h  shader.h
engine/include/eng/renderer/context/: command_queue.h  context.h  context_utils.h
engine/include/eng/renderer/helpers/: string.h
engine/include/eng/runtime/: application.h  application_base.h  entry_windowed.cpp  gui_application.h
engine/include/eng/ui/: imgui_layer.h
engine/include/eng/window/: window.h
engine/src/: main_gui.cpp  main_headless.cpp
engine/src/core/: application.cpp  layer_stack.cpp  logger.cpp  timer.cpp  window.cpp
engine/src/core/context/: command_queue.cpp  context.cpp  context_utils.cpp
engine/src/hooks/: ui_overlay.cpp
engine/src/hooks/frontend/: gui_hooks.cpp  ui_overlay.cpp
engine/src/platform/: window.cpp
engine/src/platform/macos/: input.cpp  window.cpp
engine/src/renderer/: buffer.cpp  pipeline.cpp  render_pass.cpp  renderer.cpp  renderer_api.cpp  shader.cpp
engine/src/renderer/context/: command_queue.cpp  context.cpp  context_utils.cpp
engine/src/runtime/: application.cpp  application_base.cpp  gui_application.cpp
engine/src/ui/: build.cpp  imgui_layer.cpp
engine/src/window/: window.cpp
financio/: CMakeLists.txt
financio/engine/: CMakeLists.txt
financio/engine/include/eng/core/: macros.h
financio/engine/include/eng/events/: application_event.h  key_event.h
financio/engine/include/eng/platform/: input.h
financio/engine/include/eng/renderer/: pipeline_specification.h  renderer.h
financio/engine/src/core/: logger.cpp
financio/engine/src/renderer/: render_pass.cpp  renderer.cpp
financio/engine/src/ui/: imgui_layer.cpp  implot_items.cpp
financio/include/financio/core/: id.h
financio/include/financio/trading/: account_summary_tags.cpp  contract_samples.cpp  order_samples.h  scanner_subscription_samples.cpp  utils.h
financio/include/financio/ui/: ui_manager.h
financio/include/financio/viewmodels/: account_vm.h  connection_vm.h  orders_vm.h
financio/src/rpc/: trader_client.cpp
financio/src/ui/panels/: account_panel.cpp  log_panel.cpp
financio/src/ui/widgets/: order_entry.cpp  symbol_selector.cpp
proto/: CMakeLists.txt
proto/trading/: common.proto  control.proto  events.proto  lifecycle.proto  requests.proto  state.proto  trader_service.proto
shared/proto/trading/: common.proto  control.proto  state.proto  trader_service.proto
strategy/: CMakeLists.txt
strategy/examples/: test_feature_extractor.cpp
strategy/include/: feature_extractor.h  feature_vector.h  market_data.h
strategy/include/features/: feature_base.h  momentum_feature.h  relative_momentum_feature.h  return_feature.h  volatility_feature.h
strategy/src/: feature_extractor.cpp
tools/: config.py  fmtgen.py
trader/: CMakeLists.txt  main.cpp
trader/include/trader/broker/: base_wrapper.h  trading_worker.h  trading_wrapper.h
trader/include/trader/client/: trading_worker.h  trading_wrapper.h
trader/include/trader/core/: base.h  event_types.h  logger.h  request_types.h  ring_buffer.h
trader/include/trader/rpc/: trader_service.h
trader/include/trader/types/: base.h  event_types.h  request_types.h
trader/src/broker/: trading_worker.cpp  trading_wrapper.cpp
trader/src/client/: trading_worker.cpp  trading_wrapper.cpp
trader/src/core/: logger.cpp
trader/src/rpc/: trader_server.cpp
(+12 files in other folders)
